--- a/milestone3/java/generated_code/task2/code10/pom.xml
+++ b/milestone3/java/generated_code/task2/code10/pom.xml
@@ -3,15 +3,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>code19</artifactId>
+  <artifactId>code10</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>code19</name>
+  <name>code10</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -26,13 +27,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.1</version>
-      <scope>compile</scope>
+      <version>RELEASE</version>
+      <scope>test</scope>
     </dependency>
-
   </dependencies>
   <build>
     <plugins>
+
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
